Refactored wikidata, fixed pop up width jump, added female placeholder

--- a/src/styles.css
+++ b/src/styles.css
@@ -476,7 +476,7 @@ color: #FFFF00;
 }
 
 .popup-female .picture{
-  min-height: 200px;
+  min-height: 250px;
   margin: 0;
   padding: 0 0 0 15px;
 }
